<resources>
    <string name="app_name">MovieCatalogueMADE</string>
    <string name="overview">overview</string>
    <string name="movie">Movie</string>
    <string name="movietv">Movie Tv</string>
    <string name="menu_favorite">menu Favorite</string>
    <string name="text_rating">(0.0)</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="power_connected">Power connected!</string>
    <string name="power_disconnected">Power disconnected!</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>